@@ -1,7 +1,7 @@
 Source: gscan2pdf
 Section: utils
 Priority: optional
-Build-Depends: debhelper (>= 7)
+Build-Depends: debhelper (>= 7.0.50~)
 Build-Depends-Indep: perl (>= 5.8.0-7), gettext, libtest-pod-perl
 Maintainer: Jeffrey Ratcliffe <Jeffrey.Ratcliffe@gmail.com>
 Uploaders: John Goerzen <jgoerzen@complete.org>
